# py-cidr

./: README.rst  pyproject.toml
Docs/: Changelog.pkg  Changelog.rst  Makefile  conf.py  index.rst
Docs/License/: License.rst
Docs/Misc/: Contributing.rst
Docs/_build/html/: .buildinfo  .buildinfo.bak  Changelog.html  Code-of-conduct.html  Contributing.html  License.html  README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
Docs/_build/html/License/: License.html
Docs/_build/html/_sources/: Changelog.rst.txt  README.rst.txt
Docs/_build/html/_sources/autoapi/: index.rst.txt
Docs/_build/html/_sources/autoapi/py_cidr/: Cidr.rst.txt  CidrCache.rst.txt  CidrFile.rst.txt  CidrMap.rst.txt  index.rst.txt
Docs/_build/html/autoapi/: index.html
Docs/_build/html/autoapi/py_cidr/: Cidr.html  CidrCache.html  CidrFile.html  CidrMap.html  index.html
Docs/autoapi/py_cidr/: index.rst
packaging/: PKGBUILD  optional-requirements.txt  requirements.txt
scripts/: check-source  do-install
src/: prefixmap-print.py  py-cidr-cache-print.py
src/py_cidr/: __init__.py  _cache_data.py  _cache_elem.py  _cache_files.py  _cidr_address.py  _cidr_cache.py  _cidr_clean.py  _cidr_compact.py  _cidr_nets.py  _cidr_range.py  _cidr_sort.py  _cidr_split_type.py  _cidr_subnet.py  _cidr_valid.py  _files.py  _rfc_1918.py  _utils.py  _version.py  cache_files.py  cidr_address.py  cidr_cache.py  cidr_class.py  cidr_clean.py  cidr_compact.py  cidr_file_class.py  cidr_map.py  cidr_nets.py  cidr_range.py  cidr_sort.py  cidr_subnet.py  cidr_types.py  cidr_valid.py  core.py  files.py  rfc_1918.py  utils.py  version.py
src/py_cidr/_network/: __init__.py  _cidr_address.py  _cidr_clean.py  _cidr_compact.py  _cidr_range.py  _cidr_range_split.py  _cidr_sort.py  _cidr_valid.py  _rfc_1918.py  cidr_types.py  ip_version.py
src/py_cidr/_prefix/: __init__.py  _choose_lockfile.py  _convert_cache.py  _prefix_trie.py  _prefix_trie_base.py  prefix_map.py  prefix_maps.py
src/py_cidr/_utils/: __init__.py  _files.py
tests/: py_cidr  test_cache_file.py  test_cidr.py  test_cidr_map.py  test_cidr_map_noncompact.py
(+40 files in other folders)
